# SiAnalyst

./: README.md  pyproject.toml
src/chablis/: preamble.py  rcf.py  spectro.py
src/si_analyst/: __init__.py  preamble.py  spectro.py
